package com.directi.training.lsp.solution;

public interface Quackable {
    void quack();
}
