package com.directi.training.lsp.solution;

public interface Swimmable {
    void swim();
}
