@startuml

' two interfaces to respect SRP '
interface Quackable {
    + quack()
}

interface Swimmable {
    + swim()
}

class Duck implements Quackable, Swimmable {
    + quack()
    + swim()
}

class ElectronicDuck implements Quackable, Swimmable {
    - _on: boolean
    + quack()
    + swim()
    + turnOn()
    + turnOff()
}

class Pool {
    + run()
    + swim()
    + quack()
}




Pool --> Quackable : uses
Pool --> Swimmable : uses

@enduml
